# anthropic-openai-adapter

./: LICENSE  README.md  pyproject.toml
src/anthropic_openai_adapter/: __init__.py  __main__.py  converter.py  server.py
tests/__pycache__/: test_converter.py
