[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anthropic-openai-adapter"
version = "0.1.0"
description = "Reverse proxy that translates Anthropic Messages API to OpenAI Chat Completions API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Bridge Team" },
]
keywords = ["anthropic", "openai", "adapter", "proxy", "claude", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

# 零外部依赖 - 仅使用 Python 标准库
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.27",
]

[project.scripts]
anthropic-openai-adapter = "anthropic_openai_adapter.__main__:main"

[project.urls]
Homepage = "https://github.com/anthropic-openai-adapter"
Repository = "https://github.com/anthropic-openai-adapter"

[tool.hatch.build.targets.wheel]
packages = ["src/anthropic_openai_adapter"]
